# grasimu-project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  randinq  requirements.txt  wsgi.py
data/: irregular.stl  orebody.stl  terrain2.csv  terrain3.csv
grasimu_project/: constructors.py  inputFile  rando2asc.f  randomq512.f  routes.py
grasimu_project/plotlydash/: dashboard.py  hold.py  ui_survey.py  ui_target.py  ui_terrain.py  ui_top.py  ui_vis.py
grasimu_project/templates/: index.jinja2  layout.jinja2
