[tool.poetry]
name = "grasimu_project"
version = "0.1.0"
description = "Gravimetry Forward Modelling Web App for Arbitrary 3D Density Models "
authors = ["Benjamin Saadia <saadiabenji@gmail.com>"]
maintainers = ["Benjamin Saadia <saadiabenji@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/bsaadia/grasimu-project"

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
dash = "*"
dash_table = "*"
dash_core_components = "*"
dash_html_components = "*"
dash-renderer = "*"
pandas = "*"
python-dotenv = "*"
uWSGI = "^2.0.19"
dash-bootstrap-components = "^0.11.3"
scipy = "^1.6.1"
generate-field = "^0.0.0"
pyvista = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

